<resources>
    <string name="app_name">MOTOMECHA</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="logintext">Hey, What\'s your number? \n A One Time Password(OTP) will be \n sent via SMS to verify your number</string>
    <string name="mobile_number">MOBILE NUMBER</string>
    <string name="tandc">I agree to the terms and conditions</string>
    <string name="title_activity_otp">OtpActivity</string>
    <string name="otp_text">Enter the OTP below in case if we fail \n to detect SMS Automatically</string>
    <string name="otp_hint">* * * *</string>
    <string name="title_activity_resgister">ResgisterActivity</string>
    <string name="registration_login">Registration</string>
    <string name="regist_name">NAME</string>
    <string name="email_id">EMAIL ID</string>
    <string name="address_registration">ADDRESS</string>
    <string name="welcm_screen">Welcome to Moto Mecha</string>
    <string name="title_activity_intro">Moto Mecha</string>
    <string name="intro_next">Next</string>
    <string name="intro_skip">Skip</string>
    <string name="hotline_file_provider_authority">com.motomecha.app</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_global_web_page">GlobalWebPage</string>
    <string name="title_activity_my_vechicle">MyVechicle</string>
    <string name="pincode">PINCODE</string>
    <string name="title_activity_offer_page">Offer Page</string>
    <string name="title_activity_service_history">Service History</string>
    <string name="title_activity_pick_service">PickService</string>
    <string name="title_activity_brand_select">BrandSelect</string>
    <string name="title_activity_select_vehicle">SelectVehicle</string>
    <string name="title_activity_car_service_modes">Car_service_modes</string>
    <string name="title_activity_model_select">ModelSelect</string>
    <string name="title_activity_plate__regiestration">Plate_Registration</string>
    <string name="title_activity_bike_map">BikeMapActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_confirm_booking">ConfirmBooking</string>
    <string name="title_activity_last_page">LastPage</string>
    <string name="title_activity_vehicle_mode">VehicleMode</string>
    <string name="title_activity_list_vechicle">ListVechicle</string>
    <string name="title_activity_detail_service">DetailService</string>
    <string name="title_activity_customer_reviews">CustomerReviews</string>
    <string name="title_activity_car__service_providers">Car_ServiceProviders</string>
    <string name="title_activity_car_service_providers_detail">CarServiceProvidersDetail</string>
    <string name="title_activity_insurance_page">InsurancePage</string>
    <string name="title_activity_service_tracking">ServiceTracking</string>
    <string name="title_activity_new__plate_registration">New_Plate_registration</string>
    <string name="title_activity_nearest_petrol">NearestPetrol</string>
    <string name="title_activity_profile_page">Profile_page</string>


</resources>
