<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_all"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.motomecha.app.Global_classes.ResgisterActivity"
    tools:showIn="@layout/activity_resgister">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:padding="3dp"
        android:layout_height="wrap_content"
        android:background="@drawable/registration_background"
        tools:layout_editor_absoluteY="133dp"
        tools:layout_editor_absoluteX="42dp"
        android:id="@+id/relativeLayout"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <com.motomecha.app.Global_classes.MyTextView
            android:id="@+id/textView2"
            android:layout_width="100dp"
            android:textScaleX="1.2"
            android:textAllCaps="true"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="13dp"
            android:text="@string/registration_login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_alignParentStart="true" />



        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="49dp"
            android:maxLines="1"
            android:textAllCaps="true"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:hint="@string/regist_name"
            android:backgroundTint="@color/white"
            android:inputType="textPersonName"
            android:layout_below="@+id/textView2"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="15dp"
            android:maxLines="1"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:hint="@string/email_id"
            android:backgroundTint="@color/white"
            android:inputType="textEmailAddress"
            android:layout_below="@+id/name"
            android:layout_alignStart="@+id/name" />
        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="15dp"
            android:maxLines="1"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:hint="@string/address_registration"
            android:textAllCaps="true"
            android:backgroundTint="@color/white"
            android:inputType="textPostalAddress"
            android:layout_below="@+id/email"
            android:layout_alignStart="@+id/email" />
        <EditText
            android:id="@+id/pincode_regs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="15dp"
            android:maxLines="1"
            android:maxLength="6"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:hint="@string/pincode"
            android:backgroundTint="@color/white"
            android:inputType="phone"
            android:layout_below="@+id/address"
            android:layout_alignStart="@+id/address" />
        <ImageButton
            android:id="@+id/login_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/proceed_button"
            android:background="?attr/selectableItemBackground"
            android:scaleType="fitXY"
            android:layout_below="@+id/pincode_regs"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />

    </RelativeLayout>
    <TextView
        android:id="@+id/latitude_user"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/longitude_user"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
